package com.erpmuebles.erp.entity;

public enum OrderStatus {
    PENDIENTE,
    PAGADO,
    ENVIADO,
    ENTREGADO,
    CANCELADO
}
