package com.erpmuebles.erp.entity;

public enum ProductionOrderStatus {
    PENDIENTE,
    EN_PRODUCCION,
    TERMINADA,
    CANCELADA
}
