package com.erpmuebles.erp.entity;

public enum PurchaseOrderStatus {
    PENDIENTE,
    RECIBIDA,
    CANCELADA
}
