package com.erpmuebles.erp.entity;

public enum UserRole {
    ADMIN,
    PRODUCCION,
    VENTAS,
    ALMACEN
}
